application/static/css/styles.css
/* ... */
/* MOOD MONSTER IMAGES AROUND BORDER */

/* z-index - necessary to layer monster images over containers and under text - higher sits on top of lower */

/* .page-wrapper applied to layout.html and layout-pre-login.html to apply monster images */
.page-wrapper {
    position: relative; /* positions the element relative to its normal position */
    z-index: 0; /* sets the stack order of the element */
}

/* fixes issue with space below monster images */
.spacer-register {
    height: 245px; /* add empty space below registration form */
}

.spacer-login, .spacer-badges {
    height: 585px; /* add empty space below login form */
}

.spacer-mood {
    height: 1010px; /* add empty space to mood diary with no entries */
}

.spacer-mood-entry {
    height: 715px;
}

/* -------------------------------------------- */

.container, .container-fluid {
    position: relative; /* positions the element relative to its normal position */
    z-index: 1; /* sets stack order and ensures it appears above .page-wrapper */
}

.monster-image, .monster-image-footer {
    position: absolute; /* positions the element in an absolute position */
    width: 20vw; /* sets the width of the monster images to 20% of the viewport width */
    height: auto; /* maintains the aspect ratio of image */
    z-index: 2; /* sets stack order and ensures it appears above .container and .container-fluid */
}

.text-content {
    position: relative; /* ensures z-index is effective */
    z-index: 3; /* highest to ensure it appears above any images - essential for Mood Monsters heading on home page */
 }

/* monster image positions */
.top-left { top: 0; left: 0; }
.one-third-left { top: 42%; left: 0; transform: translateY(-50%); } /* translateY(-50%) used to move the element up by half of its own height for vertical centering - sit too low on screen without */
.two-thirds-left { top: 68%; left: 0; transform: translateY(-50%); }
.bottom-left { bottom: 0; left: 0; }

.top-right { top: 0; right: 0; }
.one-third-right { top: 39%; right: 0; transform: translateY(-50%); }
.two-thirds-right { top: 70%; right: 0; transform: translateY(-50%); }
.bottom-right { bottom: 0; right: 0; }

.bottom-center { bottom: 0; left: 41%;}

/* fixes issue with space below monster images */
.spacer-register {
    height: 245px; /* add empty space below registration form */
}

.spacer-login, .spacer-badges {
    height: 585px; /* add empty space below login form */
}

.spacer-mood {
    height: 1010px; /* add empty space to mood diary with no entries */
}

.spacer-mood-entry {
    height: 715px; /* add empty space to mood diary with entries */
}


/* WEBSITE COLOUR SCHEME */

:root {
    --colour-1: #EF476F; /* pink */
    --colour-2: #FFD166; /* yellow */
    --colour-3: #06D6A0; /* green */
    --colour-4: #118AB2; /* blue */
    --colour-5: #6A4C93; /* purple - additional colour */
    --colour-6: #FB5607; /* orange - additional colour */
    --light: #FDFDFF; /* off white */
    --dark: #073B4C; /* dark blue */
    --red: #F04A49; /* red */
}

/* ------ TEXT COLOUR CLASSES TO USE IN SPANS ------ */

/* pink text class */
.colour-1 {
    color: var(--colour-1);
}
/* yellow text class */
.colour-2 {
    color: var(--colour-2);
}
/* green text class */
.colour-3 {
    color: var(--colour-3);
}
/* blue text class */
.colour-4 {
    color: var(--colour-4);
}
/* purple text class */
.colour-5 {
    color: var(--colour-5);
}
/* orange text class */
.colour-6 {
    color: var(--colour-6);
}
/* light for text */
.colour-light {
    color: var(--light);
}
/* dark for text */
.colour-dark {
    color: var(--dark);
}
/* red for ANGRY text */
.colour-red {
    color: var(--red);
}

/* ------ GRADIENT BACKGROUNDS ------ */

/* blue/green gradient */
.gradient-colour-1 {
    background: linear-gradient(45deg, var(--colour-4), var(--colour-3));
}

/* purple/blue gradient */
.gradient-colour-2 {
    background: linear-gradient(45deg, #563e77, var(--colour-4)); /* darkened default purple colour for contrast between sections */
}

/* pink/orange gradient (NOT USED) */
.gradient-colour-3 {
    background: linear-gradient(45deg, var(--colour-1), var(--colour-6));
}

/* ------ WAVE DIVIDERS ------ */

/* https://css-generators.com/wavy-shapes/ */
/* UPDATED waves - size 70px, curvature highest setting */

/* .wave-bottom creates a wave effect at the bottom of the element */
.wave-bottom {
  /* defines a mask using radial gradients */
  --mask:
    /* creates a radial gradient for the wave effect */
    radial-gradient(156.52px at 50% calc(100% - 210px),#000 99%,#0000 101%) calc(50% - 140px) 0/280px 100%,
    radial-gradient(156.52px at 50% calc(100% + 140px),#0000 99%,#000 101%) 50% calc(100% - 70px)/280px 100% repeat-x;
  /* applies the mask for webkit browsers */
  -webkit-mask: var(--mask);
  /* applies the mask for all other browsers */
  mask: var(--mask);
}

/* .wave-top creates a wave effect at the top of the element */
.wave-top {
  --mask:
    radial-gradient(156.52px at 50% 210px,#000 99%,#0000 101%) calc(50% - 140px) 0/280px 100%,
    radial-gradient(156.52px at 50% -140px,#0000 99%,#000 101%) 50% 70px/280px 100% repeat-x;
  -webkit-mask: var(--mask);
   mask: var(--mask);
}

/* .wave-top-bottom creates a wave effect at the top and bottom of the element */
.wave-top-bottom {
  --mask:
    radial-gradient(156.52px at 50% 210px,#000 99%,#0000 101%) calc(50% - 140px) 0/280px 51% repeat-x,
    radial-gradient(156.52px at 50% -140px,#0000 99%,#000 101%) 50% 70px/280px calc(51% - 70px) repeat-x,
    radial-gradient(156.52px at 50% calc(100% - 210px),#000 99%,#0000 101%) calc(50% - 140px) 100%/280px 51% repeat-x,
    radial-gradient(156.52px at 50% calc(100% + 140px),#0000 99%,#000 101%) 50% calc(100% - 70px)/280px calc(51% - 70px) repeat-x;
  -webkit-mask: var(--mask);
  mask: var(--mask);
}
/* ... */

